# laserfun-back-end

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  intall_lib_VS.bat
src/: CMakeLists.txt  DataStructures.h  main.cpp
src/Communication/: CAPI_CommunicationFront.cpp  CAPI_CommunicationFront.h  CAPI_CommunicationInstance.cpp  CAPI_CommunicationInstance.h  CAPI_CommunicationPlayers.cpp  CAPI_CommunicationPlayers.h  CAPI_Connector.cpp  CAPI_Connector.h  CAPI_ConnectorHttp.cpp  CAPI_ConnectorHttp.h  CAPI_ConnectorRadio.cpp  CAPI_ConnectorRadio.h  CMakeLists.txt
src/Game/: CGameManager.cpp  CGameManager.h  CMakeLists.txt
src/Utils/: CEvents.cpp  CEvents.h  CMakeLists.txt  CObservable.h  CObserver.h  DataStructures.h
